--- a/lukstoken/plugin/Makefile
+++ b/lukstoken/plugin/Makefile
@@ -1,3 +1,3 @@
-libcrypt-token-fido1.so: main.go
-	CGO_LDFLAGS_ALLOW='.*' go build -x -buildmode c-shared -o libcrypt-token-fido1.so github.com/darkskiez/u2f-luks/lukstoken
+libcrypt-token-u2f.so: main.go cryptsetup_token.map
+	CGO_LDFLAGS_ALLOW='.*' go build -x -buildmode c-shared -o libcrypt-token-u2f.so github.com/darkskiez/u2f-luks/lukstoken/plugin
 
