Fix Makefile to use current dir/package for build.

--- a/lukstoken/plugin/Makefile
+++ b/lukstoken/plugin/Makefile
@@ -1,3 +1,2 @@
 libcrypt-token-u2f.so: main.go cryptsetup_token.map
-	CGO_LDFLAGS_ALLOW='.*' go build -x -buildmode c-shared -o libcrypt-token-u2f.so github.com/darkskiez/u2f-luks/lukstoken/plugin
-
+	CGO_LDFLAGS_ALLOW='-Wl,--version-script=.*' go build -x -buildmode c-shared -o libcrypt-token-u2f.so
